Remove use of clojure.contrib.condition
This was the last use of monolithic contrib